.metadata/.plugins/org.eclipse.cdt.ui/STM_DAC.build.log
00:34:45 **** Incremental Build of configuration Debug for project STM_DAC ****
make -j16 all 
arm-none-eabi-g++ "../Core/Src/CPP_LINK.cpp" -mcpu=cortex-m7 -std=gnu++14 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F767xx -c -I../Core/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc -I../Drivers/STM32F7xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F7xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -fno-exceptions -fno-rtti -fno-use-cxa-atexit -Wall -fstack-usage -MMD -MP -MF"Core/Src/CPP_LINK.d" -MT"Core/Src/CPP_LINK.o" --specs=nano.specs -mfpu=fpv5-d16 -mfloat-abi=hard -mthumb -o "Core/Src/CPP_LINK.o"
../Core/Src/CPP_LINK.cpp: In function 'void cpp_link()':
../Core/Src/CPP_LINK.cpp:42:4: error: 'APPLICATION_init' was not declared in this scope
   42 |    APPLICATION_init();
      |    ^~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:49: Core/Src/CPP_LINK.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

00:34:45 Build Failed. 2 errors, 0 warnings. (took 225ms)

